Applying java 17.